Kong-Api-Gateway-Research/Kong-Keycloak-OIDC-Architecture/1-kong-api-gateway-global.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: global-kong-api-gateway
  namespace: global-kic
spec:
  gatewayClassName: global-kong-gatewayclass
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: global-api-gateway-ns
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: global-api-gateway-ns
  name: global-api-gateway-ns
